# djangoRecomm

./: .gitignore  Makefile  README.md  pyproject.toml
djangoRecomm/: .env.example  manage.py
djangoRecomm/djangoRecomm/: asgi.py  settings.py  urls.py  wsgi.py
